# zep-nlp-server

./: .gitignore  Dockerfile  config.yaml  docker-compose.build.hcl  pyproject.toml  upload.sh
models/: README.md
models/zh_core_web_sm/zh_core_web_sm-3.6.0/: README.md  accuracy.json  meta.json
